--- a/style/styleDerrota.css
+++ b/style/styleDerrota.css
@@ -7,6 +7,7 @@ body {
     height: 100%;
     position: absolute;
     text-align: center;
+    display: none;
 }
 .telaDerrota {
     background: rgb(255, 255, 255);
